Fix UI handling of FamilyMemberHistory

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
     <li ng-class="{'active':resource=='MedicationDispense'}"><a ng-click="MedicationDispense()">Dispenses</a></li>
     <li ng-class="{'active':resource=='Procedure'}"><a ng-click="Procedure()">Procedures</a></li>
     <li ng-class="{'active':resource=='Immunization'}"><a ng-click="Immunization()">Immunizations</a></li>
-    <li ng-class="{'active':resource=='FamilyHistory'}"><a ng-click="FamilyHistory()">Family History</a></li>
+    <li ng-class="{'active':resource=='FamilyMemberHistory'}"><a ng-click="FamilyMemberHistory()">Family Member History</a></li>
     <li ng-class="{'active':resource=='AllergyIntolerance'}"><a ng-click="AllergyIntolerance()">Allergies</a></li>
     <li ng-class="{'active':resource=='DocumentReference'}"><a ng-click="DocumentReference()">Documents</a></li>
     <li ng-class="{'active':resource=='ImagingStudy'}"><a ng-click="ImagingStudy()">Imaging Studies</a></li>
